--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 title: My Portfolio
+#logo: assets/img/headshot_circle.png
+#description: text below image
+show_downloads: true
+theme: bulma-clean-theme
