--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: My Portfolio
 #logo: assets/img/headshot_circle.png
 #description: text below image
 show_downloads: true
-theme: bulma-clean-theme
+remote_theme: chrisrhymes/bulma-clean-theme@v0.14.0
