--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,11 @@ title: My Portfolio
 #description: text below image
 show_downloads: true
 remote_theme: chrisrhymes/bulma-clean-theme@v0.14.0
+
+- name: Page Name
+  link: /page-1/
+- name: Blog
+  link: /blog/
+  dropdown: 
+    - name: Page 2
+      link: /page-2/
