--- a/footer.yml
+++ b/footer.yml
@@ -4,3 +4,9 @@
   link: /about/
 - name: Privacy Policy
   link: /privacy-policy/
+
+social:
+  facebook: https://www.facebook.com/diondemetrius
+  instagram: https://www.instagram.com/diondemetrius/
+  threads: https://www.threads.net/@diondemetrius
+  linkedin: https://www.linkedin.com/in/dion-demetrius/
